--- a/app/app.css
+++ b/app/app.css
@@ -70,6 +70,21 @@ Image {
     padding: 10;
 }
 
+.responseGrid {
+    margin: 12;
+    margin-top: 10;
+    margin-bottom: 10;
+}
+
+.button {
+    width: 100;
+    height: 100;
+    margin: 0;
+    padding: 0;
+    background-color: #252525;
+    border-radius: 5;
+}
+
 /* .checkboxList {
     margin: 10;
     padding: 5;
