Allow negative purchases and fixed sharp edges on tab's right side

--- a/app/app.css
+++ b/app/app.css
@@ -166,7 +166,7 @@ Image {
 
 .curvedRight {
     border-bottom-right-radius: 5;
-    border-bottom-left-radius: 5;
+    border-top-right-radius: 5;
 }
 
 .curvedLeft {
