Added habbajet info, checkbox, and button components to habbajet-tab

--- a/app/views/habbajet-tab-view/habbajet-tab/habbajet-tab.html
+++ b/app/views/habbajet-tab-view/habbajet-tab/habbajet-tab.html
@@ -1,3 +1,7 @@
 <StackLayout>
     <label [text]="name"></label>
+    <habbajet-image></habbajet-image>
+    <habbajet-info></habbajet-info>
+    <habbajet-checkbox></habbajet-checkbox>
+    <habbajet-buttons></habbajet-buttons>
 </StackLayout>
