--- a/app/views/habbajet-tab-view/habbajet-tab/habbajet-image/habbajet-image.html
+++ b/app/views/habbajet-tab-view/habbajet-tab/habbajet-image/habbajet-image.html
@@ -1,3 +1,3 @@
 <StackLayout>
-    <Image src="images/habbajets/i4-0.png"></Image>
+    <Image class="hImage" src="~/images/habbajets/i4-0.png"></Image>
 </StackLayout>
