Input habbajets through components, fleshed out habbajet-info a bit

--- a/app/views/habbajet-tab-view/habbajet-tab/habbajet-info/habbajet-info.html
+++ b/app/views/habbajet-tab-view/habbajet-tab/habbajet-info/habbajet-info.html
@@ -1,3 +1,6 @@
 <StackLayout>
-    <label text="Info goes here"></label>
+    <label [text]="'Frame:  ' + habbajet.image.state"></label>
+    <label [text]="'Action: ' + habbajet.image.action"></label>
+    <label [text]="'Frame:  ' + habbajet.image.frame"></label>
+    <label [text]="habbajet.image.imageUrl"></label>
 </StackLayout>
