--- a/app/views/habbajet-tab-view/habbajet-tab-view.html
+++ b/app/views/habbajet-tab-view/habbajet-tab-view.html
@@ -7,20 +7,20 @@
             <habbajet-tab [habbajetIndex]="0"></habbajet-tab>
         </StackLayout>
         <StackLayout *tabItem="{title: 'h1'}">
-            <habbajet-tab habbajetIndex="1"></habbajet-tab>
+            <habbajet-tab [habbajetIndex]="1"></habbajet-tab>
         </StackLayout>
-        <StackLayout *tabItem="{title: 'h2'}">
-            <habbajet-tab habbajetIndex="2"></habbajet-tab>
+        <!-- <StackLayout *tabItem="{title: 'h2'}">
+            <habbajet-tab [habbajetIndex]="2"></habbajet-tab>
         </StackLayout>
         <StackLayout *tabItem="{title: 'h3'}">
-            <habbajet-tab habbajetIndex="3"></habbajet-tab>
+            <habbajet-tab [habbajetIndex]="3"></habbajet-tab>
         </StackLayout>
         <StackLayout *tabItem="{title: 'h4'}">
-            <habbajet-tab habbajetIndex="4"></habbajet-tab>
+            <habbajet-tab [habbajetIndex]="4"></habbajet-tab>
         </StackLayout>
         <StackLayout *tabItem="{title: 'h5'}">
-            <habbajet-tab habbajetIndex="5"></habbajet-tab>
-        </StackLayout>
+            <habbajet-tab [habbajetIndex]="5"></habbajet-tab>
+        </StackLayout> -->
         <StackLayout *tabItem="{title: 'Add'}">
             <add-tab></add-tab>
         </StackLayout>
