--- a/app/views/habbajet-tab-view/habbajet-tab/habbajet-buttons/habbajet-buttons.css
+++ b/app/views/habbajet-tab-view/habbajet-tab/habbajet-buttons/habbajet-buttons.css
@@ -1,3 +1,12 @@
-label {
-    color: #ff00ff;
+.button {
+    color: #ffffff;
+    background-color: #111111;
+    font-weight: bold;
+    font-size: 30;
+}
+
+.lockedButton {
+    color: #a8a8a8;
+    background-color: #313131;
+    font-size: 30;
 }
