--- a/app/views/habbajet-tab-view/habbajet-tab/habbajet-buttons/habbajet-buttons.html
+++ b/app/views/habbajet-tab-view/habbajet-tab/habbajet-buttons/habbajet-buttons.html
@@ -1,7 +1,7 @@
 <StackLayout>
     <label text="Buttons go here"></label>
     <GridLayout rows="auto" columns="*,*">
-        <label text="GOOD" [class]="locked ? 'button' : 'lockedButton'" tap="onPositiveTap"></label>
-        <label text="BAD" [class]="locked ? 'button' : 'lockedButton'" tap="onNegativeTap"></label>
+        <button col="0" text="GOOD" [class]="locked ? 'lockedButton' : 'button'" (tap)="onPositiveTap()"></button>
+        <button col="1" text="BAD" [class]="locked ? 'lockedButton' : 'button'" (tap)="onNegativeTap()"></button>
     </GridLayout>
 </StackLayout>
