Components change habbajets through the habbajet service

--- a/app/views/habbajet-tab-view/habbajet-tab/habbajet-info/habbajet-info.html
+++ b/app/views/habbajet-tab-view/habbajet-tab/habbajet-info/habbajet-info.html
@@ -1,6 +1,3 @@
 <StackLayout>
-    <label [text]="'Frame:  ' + habbajet.image.state"></label>
-    <label [text]="'Action: ' + habbajet.image.action"></label>
-    <label [text]="'Frame:  ' + habbajet.image.frame"></label>
-    <label [text]="habbajet.image.imageUrl"></label>
+    <label [text]="'Streak:  ' + info.streak"></label>
 </StackLayout>
