--- a/app/views/habbajet-tab-view/habbajet-tab-view.html
+++ b/app/views/habbajet-tab-view/habbajet-tab-view.html
@@ -1,5 +1,5 @@
 <StackLayout>
-    <TabView androidTabsPosition="bottom" id='tabView'>
+    <TabView id='tabView'>
         <StackLayout *tabItem="{title: 'Budget'}">
             <budget-tab></budget-tab>
         </StackLayout>
@@ -9,10 +9,10 @@
         <StackLayout *tabItem="{title: 'h1'}">
             <habbajet-tab [habbajetIndex]="1"></habbajet-tab>
         </StackLayout>
-        <!-- <StackLayout *tabItem="{title: 'h2'}">
+        <StackLayout *tabItem="{title: 'h2'}">
             <habbajet-tab [habbajetIndex]="2"></habbajet-tab>
         </StackLayout>
-        <StackLayout *tabItem="{title: 'h3'}">
+        <!-- <StackLayout *tabItem="{title: 'h3'}">
             <habbajet-tab [habbajetIndex]="3"></habbajet-tab>
         </StackLayout>
         <StackLayout *tabItem="{title: 'h4'}">
